correçao de conflitos (#40)