@@ -7,6 +7,8 @@ import com.smartwallet.entity.*;
 import com.smartwallet.exception.BusinessException;
 import com.smartwallet.exception.ResourceNotFoundException;
 import com.smartwallet.repository.*;
+import com.smartwallet.service.TransactionService;
+import com.smartwallet.service.WalletService;
 import lombok.RequiredArgsConstructor;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -31,25 +33,12 @@ public class PortfolioService {
     private final AssetRepository assetRepository;
     private final TransactionRepository transactionRepository;
     private final UserRepository userRepository;
+    private final WalletService walletService;
+    private final TransactionService transactionService;
 
     @Transactional
     public WalletResponse createWallet(Long userId, CreateWalletRequest request) {
-        User user = userRepository.findById(userId)
-                .orElseThrow(() -> new ResourceNotFoundException("Usuário não encontrado"));
-
-        Wallet wallet = Wallet.builder()
-                .user(user)
-                .name(request.name())
-                .description(request.description())
-                .totalBalance(BigDecimal.ZERO)
-                .totalInvested(BigDecimal.ZERO)
-                .totalProfitLoss(BigDecimal.ZERO)
-                .build();
-
-        wallet = walletRepository.save(wallet);
-        logger.info("Wallet created: {} for user: {}", wallet.getId(), userId);
-
-        return WalletResponse.fromEntity(wallet);
+        return walletService.createWallet(userId, request);
     }
 
     public List<WalletResponse> getUserWallets(Long userId) {
@@ -66,26 +55,26 @@ public class PortfolioService {
         return wallets.stream()
                 .peek(wallet -> {
                     try {
-                        recalculateWalletTotals(wallet);
+                        walletService.recalculateWalletTotals(wallet);
                     } catch (Exception e) {
                         logger.error("Error recalculating wallet {}: {}", wallet.getId(), e.getMessage());
                     }
                 })
                 .map(WalletResponse::fromEntity)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public WalletResponse getWalletById(Long walletId, Long userId) {
-        Wallet wallet = walletRepository.findByIdAndUserId(walletId, userId)
-                .orElseThrow(() -> new ResourceNotFoundException("Carteira não encontrada"));
-        recalculateWalletTotals(wallet);
+        walletService.validateWalletAccess(walletId, userId);
+        Wallet wallet = walletService.getWalletEntityById(walletId);
+        walletService.recalculateWalletTotals(wallet);
         return WalletResponse.fromEntity(wallet);
     }
 
     @Transactional
     public AssetResponse addAsset(Long walletId, Long userId, CreateAssetRequest request) {
-        Wallet wallet = walletRepository.findByIdAndUserId(walletId, userId)
-                .orElseThrow(() -> new ResourceNotFoundException("Carteira não encontrada"));
+        walletService.validateWalletAccess(walletId, userId);
+        Wallet wallet = walletService.getWalletEntityById(walletId);
 
         if (assetRepository.findByWalletIdAndSymbol(walletId, request.symbol().toUpperCase()).isPresent()) {
             throw new BusinessException("Ativo já existe nesta carteira", "ASSET_ALREADY_EXISTS");
@@ -113,7 +102,7 @@ public class PortfolioService {
         asset.calculateProfitLoss();
         asset = assetRepository.save(asset);
 
-        recalculateWalletTotals(wallet);
+        walletService.recalculateWalletTotals(wallet);
         logger.info("Asset added: {} to wallet: {}", asset.getSymbol(), walletId);
 
         return AssetResponse.fromEntity(asset);
@@ -124,13 +113,13 @@ public class PortfolioService {
         Asset asset = assetRepository.findById(assetId)
                 .orElseThrow(() -> new ResourceNotFoundException(ASSET_NOT_FOUND));
 
-        validateAssetAccess(asset, userId);
+        walletService.validateWalletAccess(asset.getWallet().getId(), userId);
 
         asset.setCurrentPrice(request.currentPrice());
         asset.calculateProfitLoss();
         asset = assetRepository.save(asset);
 
-        recalculateWalletTotals(asset.getWallet());
+        walletService.recalculateWalletTotals(asset.getWallet());
         logger.info("Price updated for asset: {}", asset.getSymbol());
 
         return AssetResponse.fromEntity(asset);
@@ -141,138 +130,34 @@ public class PortfolioService {
         Asset asset = assetRepository.findById(assetId)
                 .orElseThrow(() -> new ResourceNotFoundException(ASSET_NOT_FOUND));
 
-        validateAssetAccess(asset, userId);
+        walletService.validateWalletAccess(asset.getWallet().getId(), userId);
 
-        BigDecimal totalValue = request.quantity().multiply(request.price());
-        BigDecimal fees = request.fees() != null ? request.fees() : BigDecimal.ZERO;
-        BigDecimal totalWithFees = totalValue.add(fees);
+        TransactionResponse response = transactionService.createTransaction(userId, assetId, request);
 
-        Transaction transaction = Transaction.builder()
-                .asset(asset)
-                .transactionType(request.transactionType())
-                .quantity(request.quantity())
-                .price(request.price())
-                .totalValue(totalValue)
-                .fees(fees)
-                .totalWithFees(totalWithFees)
-                .transactionDate(request.transactionDate() != null ? request.transactionDate() : LocalDate.now().atStartOfDay())
-                .notes(request.notes())
-                .build();
-
-        transaction = transactionRepository.save(transaction);
-
-        recalculateAssetFromTransactions(asset);
-        recalculateWalletTotals(asset.getWallet());
+        transactionService.recalculateAssetFromTransactions(asset);
+        walletService.recalculateWalletTotals(asset.getWallet());
 
         logger.info("Transaction added: {} for asset: {}", request.transactionType(), asset.getSymbol());
 
-        return TransactionResponse.fromEntity(transaction);
-    }
-
-    private void validateAssetAccess(Asset asset, Long userId) {
-        if (!asset.getWallet().getUser().getId().equals(userId)) {
-            throw new BusinessException("Acesso negado", "ACCESS_DENIED");
-        }
-    }
-
-    private void recalculateAssetFromTransactions(Asset asset) {
-        List<Transaction> transactions = transactionRepository.findByAssetIdOrderedByDateDesc(asset.getId());
-        
-        if (transactions.isEmpty()) {
-            asset.setQuantity(BigDecimal.ZERO);
-            asset.setAveragePrice(BigDecimal.ZERO);
-            asset.setTotalInvested(BigDecimal.ZERO);
-            asset.setCurrentValue(BigDecimal.ZERO);
-            asset.setProfitLoss(BigDecimal.ZERO);
-            asset.setProfitLossPercentage(BigDecimal.ZERO);
-            assetRepository.save(asset);
-            return;
-        }
-
-        BigDecimal totalQuantity = BigDecimal.ZERO;
-        BigDecimal totalCost = BigDecimal.ZERO;
-        BigDecimal totalSold = BigDecimal.ZERO;
-
-        for (Transaction t : transactions) {
-            switch (t.getTransactionType()) {
-                case BUY -> {
-                    BigDecimal cost = t.getTotalWithFees() != null ? t.getTotalWithFees() : t.getTotalValue();
-                    totalQuantity = totalQuantity.add(t.getQuantity());
-                    totalCost = totalCost.add(cost);
-                }
-                case SELL -> {
-                    BigDecimal avgPrice = totalQuantity.compareTo(BigDecimal.ZERO) > 0 
-                        ? totalCost.divide(totalQuantity, 8, RoundingMode.HALF_UP) 
-                        : BigDecimal.ZERO;
-                    totalCost = totalCost.subtract(avgPrice.multiply(t.getQuantity()));
-                    totalQuantity = totalQuantity.subtract(t.getQuantity());
-                    totalSold = totalSold.add(t.getTotalValue());
-                }
-                default -> {
-                    // No action needed for other transaction types
-                }
-            }
-        }
-
-        if (totalQuantity.compareTo(BigDecimal.ZERO) > 0) {
-            asset.setQuantity(totalQuantity);
-            asset.setAveragePrice(totalCost.divide(totalQuantity, 2, RoundingMode.HALF_UP));
-            asset.setTotalInvested(totalCost);
-        } else {
-            asset.setQuantity(BigDecimal.ZERO);
-            asset.setAveragePrice(BigDecimal.ZERO);
-            asset.setTotalInvested(BigDecimal.ZERO);
-        }
-
-        asset.calculateProfitLoss();
-        assetRepository.save(asset);
-    }
-
-    private void recalculateWalletTotals(Wallet wallet) {
-        List<Asset> assets = assetRepository.findByWalletId(wallet.getId());
-
-        BigDecimal totalInvested = BigDecimal.ZERO;
-        BigDecimal totalCurrentValue = BigDecimal.ZERO;
-
-        for (Asset asset : assets) {
-            recalculateAssetFromTransactions(asset);
-            totalInvested = totalInvested.add(asset.getTotalInvested() != null ? asset.getTotalInvested() : BigDecimal.ZERO);
-            totalCurrentValue = totalCurrentValue.add(asset.getCurrentValue() != null ? asset.getCurrentValue() : BigDecimal.ZERO);
-        }
-
-        wallet.setTotalInvested(totalInvested);
-        wallet.setTotalBalance(totalCurrentValue);
-        wallet.setTotalProfitLoss(totalCurrentValue.subtract(totalInvested));
-        walletRepository.save(wallet);
+        return response;
     }
 
     public List<AssetResponse> getWalletAssets(Long walletId, Long userId) {
-        if (!walletRepository.existsByIdAndUserId(walletId, userId)) {
-            throw new ResourceNotFoundException("Carteira não encontrada");
-        }
+        walletService.validateWalletAccess(walletId, userId);
         
         List<Asset> assets = assetRepository.findByWalletId(walletId);
         return assets.stream()
-                .peek(this::recalculateAssetFromTransactions)
+                .peek(transactionService::recalculateAssetFromTransactions)
                 .map(AssetResponse::fromEntity)
                 .toList();
     }
 
     public List<TransactionResponse> getAssetTransactions(Long assetId, Long userId) {
-        Asset asset = assetRepository.findById(assetId)
-                .orElseThrow(() -> new ResourceNotFoundException(ASSET_NOT_FOUND));
-
-        validateAssetAccess(asset, userId);
-
-        return transactionRepository.findByAssetIdOrderedByDateDesc(assetId).stream()
-                .map(TransactionResponse::fromEntity)
-                .toList();
+        return transactionService.getTransactionsByAssetId(userId, assetId);
     }
 
     public List<TransactionResponse> getUserTransactions(Long userId) {
-        return transactionRepository.findByUserId(userId).stream()
-                .map(TransactionResponse::fromEntity)
-                .toList();
+        return transactionService.getAllTransactionsByUserId(userId);
     }
 
     public PortfolioSummary getPortfolioSummary(Long userId) {
@@ -283,7 +168,7 @@ public class PortfolioService {
         BigDecimal totalProfitLoss = BigDecimal.ZERO;
 
         for (Wallet wallet : wallets) {
-            recalculateWalletTotals(wallet);
+            walletService.recalculateWalletTotals(wallet);
             totalInvested = totalInvested.add(wallet.getTotalInvested() != null ? wallet.getTotalInvested() : BigDecimal.ZERO);
             totalCurrentValue = totalCurrentValue.add(wallet.getTotalBalance() != null ? wallet.getTotalBalance() : BigDecimal.ZERO);
             totalProfitLoss = totalProfitLoss.add(wallet.getTotalProfitLoss() != null ? wallet.getTotalProfitLoss() : BigDecimal.ZERO);
@@ -295,7 +180,7 @@ public class PortfolioService {
         }
 
         List<Asset> allAssets = assetRepository.findByUserId(userId);
-        allAssets.forEach(this::recalculateAssetFromTransactions);
+        allAssets.forEach(transactionService::recalculateAssetFromTransactions);
         
         Map<String, List<Asset>> byType = allAssets.stream()
                 .collect(Collectors.groupingBy(a -> a.getAssetType() != null ? a.getAssetType().name() : "OTHER"));
